# NGH

./: Makefile  NGH.cabal  README.rst  TestSuite.hs
Data/NGH/: Align.hs  Alignments.hs  Annotation.hs  FastQ.hs  PSSM.hs  QualityControl.hs  SuffixTree.hs  SuffixTrie.hs  Trim.hs
Data/NGH/Formats/: Embl.hs  FastQ.hs  Fasta.hs  Gff.hs  Sam.hs
Data/NGH/Formats/Tests/: Embl.hs  FastQ.hs  Fasta.hs  Gff.hs  Sam.hs
Data/NGH/Tests/: Align.hs  Alignments.hs  Annotation.hs  SuffixTree.hs  SuffixTrie.hs  Trim.hs
examples/: Count.hs  ReadGzipFastQ.hs
