Name: NGH
Version: 0.0.0.0.0
Cabal-Version: >= 1.2
Build-Type: Simple

Author:Luis Pedro Coelho
Copyright:(C) 2012 Luis Pedro Coelho
License: MIT
License-File:COPYING.MIT
Maintainer:luis@luispedro.org

Homepage:http://luispedro.org/software/ngh
Synopsis:Next-generation Sequence Analysis
Category:Bioinformatics

Tested-With: GHC==7.4.1

Library
    Build-Depends:
                base
                ,bytestring
                ,conduit
                ,convertible
                ,primitive
                ,vector
    Exposed-modules:
                Data.NGH.Align
                ,Data.NGH.FastQ
                ,Data.NGH.SuffixTree
                ,Data.NGH.SuffixTrie
                ,Data.NGH.Trim
    GHC-Options: -Wall -fwarn-tabs -O2


Test-Suite test-NGH
    Type: exitcode-stdio-1.0
    Main-Is: TestSuite.hs
    Build-Depends:
                HUnit
                ,QuickCheck
                ,test-framework
                ,test-framework-hunit
                ,test-framework-quickcheck2
                ,test-framework-th
    Other-Modules:
        Data.NGH.Tests.Align
    GHC-Options: -Wall -fwarn-tabs -fno-warn-missing-signatures

