Name: NGH
Version: 0.0.0.0.0
Cabal-Version: >= 1.2
Build-Type: Simple
License: MIT
License-File:COPYING.MIT
Author:Luis Pedro Coelho
Homepage:http://luispedro.org/software/ngh
Category:Bioinformatics
Synopsis:Next-generation Sequence Analysis

Library
    Build-Depends:
                base
                ,bytestring
                ,conduit
                ,convertible
                ,primitive
                ,vector
    Exposed-modules:
                Data.NGH.Align
                ,Data.NGH.FastQ
                ,Data.NGH.SuffixTree
                ,Data.NGH.Trim
    GHC-Options: -Wall -fwarn-tabs


Test-Suite test-NGH
    Type: exitcode-stdio-1.0
    Main-Is: TestSuite.hs
    Build-Depends:
                HUnit
                ,QuickCheck
                ,test-framework
                ,test-framework-hunit
                ,test-framework-quickcheck2
                ,test-framework-th
    Other-Modules:
        Data.NGH.Tests.Align
    GHC-Options: -Wall -fwarn-tabs -fno-warn-missing-signatures


